# jukz

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  run-client-a.bat  run-client-b.bat  run-client.bat  settings.gradle
.superpowers/brainstorm/2028-1781001638/content/: waiting.html
.superpowers/brainstorm/2028-1781001638/state/: server-stopped
core/: build.gradle
docs/: RELAY-TEST.md
docs/superpowers/plans/: 2026-06-08-jukz-core.md  2026-06-10-relay-nat-traversal.md  2026-06-12-ghost-takeover-r2.md
docs/superpowers/specs/: 2026-06-08-jukz-design.md  2026-06-09-jukz-host-share-design.md  2026-06-09-jukz-join-client-design.md  2026-06-09-jukz-world-list-screen-design.md  2026-06-10-jukz-relay-nat-traversal-design.md  2026-06-12-ghost-takeover-r2-design.md
fabric/: build.gradle
fabric/src/main/java/dev/jukz/mixin/: IntegratedServerLoaderMixin.java  MinecraftClientDisconnectMixin.java  WorldEntryMixin.java
fabric/src/main/kotlin/dev/jukz/: JukzClient.kt  JukzMod.kt
fabric/src/main/kotlin/dev/jukz/client/: GuestSession.kt  HostCoordinator.kt  JoinCoordinator.kt  MinecraftGameHandoff.kt  MinecraftLanOpener.kt  ShareCoordinator.kt  WorldOpenInterceptor.kt
fabric/src/main/kotlin/dev/jukz/config/: JukzConfig.kt  PersistentNodeId.kt
fabric/src/main/kotlin/dev/jukz/discovery/: CompositeWorldRegistry.kt  Discovery.kt  MldhtWorldRegistry.kt  (+2 more)
fabric/src/main/resources/: fabric.mod.json  jukz.mixins.json
rendezvous/: Cargo.toml  Dockerfile  README.md  fly.toml  run-local.bat
rendezvous/src/: main.rs  relay.rs  snapshot.rs  store.rs
(+110 files in other folders)
